--- a/client/app/src/main/res/values/styles.xml
+++ b/client/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="actionBarTheme">@style/WiShare.ActionBarTheme</item>
         <item name="actionBarStyle">@style/WiShare.ActionBarStyle</item>
         <item name="colorPrimary">@color/themeGreen</item>
