--- a/client/app/src/main/res/xml/pref_headers.xml
+++ b/client/app/src/main/res/xml/pref_headers.xml
@@ -3,18 +3,18 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="com.example.eric.wishare.view.SettingsActivity$GeneralPreferenceFragment"
+        android:fragment="com.example.eric.wishare.SettingsActivity$GeneralPreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/pref_header_general" />
 
     <header
-        android:fragment="com.example.eric.wishare.view.SettingsActivity$NotificationPreferenceFragment"
+        android:fragment="com.example.eric.wishare.SettingsActivity$NotificationPreferenceFragment"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_notifications" />
 
     <header
-        android:fragment="com.example.eric.wishare.view.SettingsActivity$DataSyncPreferenceFragment"
+        android:fragment="com.example.eric.wishare.SettingsActivity$DeveloperPreferenceFragment"
         android:icon="@drawable/ic_sync_black_24dp"
-        android:title="@string/pref_header_data_sync" />
+        android:title="@string/pref_header_developer" />
 
 </preference-headers>
