--- a/client/app/src/main/res/layout/layout_invitation_list_item_eric.xml
+++ b/client/app/src/main/res/layout/layout_invitation_list_item_eric.xml
@@ -35,8 +35,7 @@
         android:orientation="vertical"
         android:id="@+id/expandable_layout_invitation"
         app:el_duration="500"
-        app:el_expanded="true"
-        app:el_parallax="0.5">
+        app:el_expanded="true">
 
         <LinearLayout
             android:layout_width="match_parent"
