--- a/client/app/src/main/res/xml/pref_developer.xml
+++ b/client/app/src/main/res/xml/pref_developer.xml
@@ -3,7 +3,7 @@
     <SwitchPreference
         android:defaultValue="true"
         android:key="pk_enable_database"
-        android:summary="All changes made will persist across runs"
+        android:summary="If enabled, changes will be written to the database. If disabled, the database will be Read-Only."
         android:title="Enable Database"/>
 
     <SwitchPreference
