--- a/client/app/src/main/res/layout/layout_invitable_contacts.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts.xml
@@ -7,34 +7,51 @@
     <LinearLayout
         android:id="@+id/headers"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="10"
+        android:layout_height="50dp"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="0dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="2">
-            <CheckBox
-                android:id="@+id/cb_select_all"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                style="@drawable/ripple"
-                android:background="@drawable/ripple"
-                android:theme="@style/greenCheck"/>
-        </LinearLayout>
+            android:gravity="center">
 
-        <Button
-            android:gravity="left|center_vertical"
-            android:paddingLeft="32dp"
-            android:id="@+id/btn_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Name"
-            android:layout_weight="8"
-            style="@drawable/ripple"
-            android:background="@drawable/ripple" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="10"
+                android:gravity="center_vertical">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="2">
+                    <CheckBox
+                        android:id="@+id/cb_select_all"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        style="@drawable/ripple"
+                        android:visibility="visible"
+                        android:background="@drawable/ripple"
+                        android:theme="@style/greenCheck"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/btn_name"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    style="@drawable/ripple"
+                    android:background="@drawable/ripple" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
     </LinearLayout>
 
     <ScrollView
