--- a/client/app/src/main/res/layout/layout_invitable_contacts.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts.xml
@@ -54,6 +54,11 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/themeGreen"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -65,4 +70,9 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/themeGreen"/>
 </LinearLayout>
