--- a/client/app/src/main/res/layout/layout_permitted_contacts.xml
+++ b/client/app/src/main/res/layout/layout_permitted_contacts.xml
@@ -53,6 +53,10 @@
                 style="@drawable/ripple"
                 android:background="@drawable/ripple"/>
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/themeGreen"/>
 
         <ScrollView
             android:layout_width="match_parent"
