--- a/client/app/src/main/res/layout/layout_tabbed_scroll_view.xml
+++ b/client/app/src/main/res/layout/layout_tabbed_scroll_view.xml
@@ -35,13 +35,19 @@
 
         </com.example.eric.wishare.view.WiTabbedScrollViewPager>
 
-        <LinearLayout
+        <View
             app:layout_constraintTop_toBottomOf="@id/view_pager"
+            android:id="@+id/bottom_border"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/themeGreen"/>
+
+        <LinearLayout
+            app:layout_constraintTop_toBottomOf="@id/bottom_border"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_width="match_parent"
