--- a/client/app/src/main/res/layout/layout_permitted_contacts.xml
+++ b/client/app/src/main/res/layout/layout_permitted_contacts.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/ll_permitted_contact">
 
         <LinearLayout
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/border_top"
             android:id="@+id/headers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,13 +57,19 @@
                 android:background="@drawable/ripple"/>
         </LinearLayout>
         <View
+            app:layout_constraintTop_toBottomOf="@id/headers"
+            app:layout_constraintBottom_toTopOf="@+id/scroller"
             android:layout_width="match_parent"
             android:layout_height="2dp"
+            android:id="@+id/border_top"
             android:background="@color/themeGreen"/>
 
         <ScrollView
+            app:layout_constraintTop_toBottomOf="@id/border_top"
+            app:layout_constraintBottom_toTopOf="@id/bottom_border"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:id="@+id/scroller"
+            android:layout_height="0dp">
             <LinearLayout
                 android:id="@+id/items"
                 android:layout_width="match_parent"
@@ -69,7 +78,48 @@
             </LinearLayout>
         </ScrollView>
 
-    </LinearLayout>
+        <View
+            app:layout_constraintTop_toBottomOf="@id/scroller"
+            app:layout_constraintBottom_toTopOf="@id/layout"
+            android:id="@+id/bottom_border"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/themeGreen"/>
+
+        <LinearLayout
+            app:layout_constraintTop_toBottomOf="@id/bottom_border"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:visibility="visible"
+                android:id="@+id/btn_cancel"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"
+                android:text="Cancel"/>
+
+            <Button
+                android:visibility="visible"
+                android:id="@+id/btn_revoke_access_all"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"
+                android:text="Revoke Access"/>
+        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
