--- a/client/app/src/main/res/layout/layout_invitable_contacts.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <LinearLayout
@@ -65,19 +66,24 @@
         android:id="@+id/border_top"
         android:background="@color/themeGreen"/>
 
-    <ScrollView
+    <LinearLayout
         app:layout_constraintTop_toBottomOf="@id/border_top"
+        android:id="@+id/scroller"
         app:layout_constraintBottom_toTopOf="@id/bottom_border"
         android:layout_width="match_parent"
-        android:id="@+id/scroller"
         android:layout_height="0dp">
-        <LinearLayout
-            android:id="@+id/items"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-        </LinearLayout>
-    </ScrollView>
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:id="@+id/items"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            </LinearLayout>
+        </ScrollView>
+
+    </LinearLayout>
 
     <View
         app:layout_constraintTop_toBottomOf="@id/scroller"
@@ -89,10 +95,8 @@
 
     <LinearLayout
         app:layout_constraintTop_toBottomOf="@id/bottom_border"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_border2"
         android:id="@+id/layout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_width="match_parent"
@@ -112,13 +116,39 @@
 
         <Button
             android:visibility="visible"
-            android:id="@+id/btn_invite_all"
+            android:id="@+id/btn_invite_selected"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@drawable/ripple"
             android:background="@drawable/ripple"
-            android:text="Revoke Access"/>
+            android:text="Invite"/>
+    </LinearLayout>
+
+    <LinearLayout
+        app:layout_constraintTop_toBottomOf="@id/layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/bottom_border2"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:visibility="visible"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=" "/>
+
+        <Button
+            android:visibility="visible"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=" "/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
