--- a/client/app/src/main/res/layout/layout_permitted_contacts.xml
+++ b/client/app/src/main/res/layout/layout_permitted_contacts.xml
@@ -88,7 +88,7 @@
 
         <LinearLayout
             app:layout_constraintTop_toBottomOf="@id/bottom_border"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_border2"
             android:id="@+id/layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -118,6 +118,32 @@
                 style="@drawable/ripple"
                 android:background="@drawable/ripple"
                 android:text="Revoke Access"/>
+        </LinearLayout>
+
+        <LinearLayout
+            app:layout_constraintTop_toBottomOf="@id/layout"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/bottom_border2"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:visibility="visible"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" "/>
+
+            <Button
+                android:visibility="visible"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" "/>
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
