--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -142,6 +142,7 @@
     <color name="Black">#000000</color>
     <color name="themedarker">#4c4c4c</color>
     <color name="themedarkest">#333333</color>
+    <color name="themedarkGreen">#333733</color>
     <color name="themedark">#808080</color>
     <color name="themeGreen">#1A964E</color>
     <color name="wishare_standard">#23CE6B</color>
