--- a/client/app/src/main/res/values/styles.xml
+++ b/client/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryDark">@color/themedark</item>
         <item name="colorAccent">@color/themeGreen</item>
         <item name="android:textColorPrimary">@color/WhiteSmoke</item>
-        <item name="colorControlNormal">@color/themedark</item>
+        <item name="colorControlNormal">@color/Black</item>
     </style>
     <style name="WiShare.ActionBarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <item name="colorControlNormal">@color/themedarker</item>
