--- a/client/app/src/main/res/layout/layout_contact_list_item.xml
+++ b/client/app/src/main/res/layout/layout_contact_list_item.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:padding="8dp"
         android:textSize="18sp"
+        android:background="@drawable/ripple"
         android:id="@+id/tv_contact_name"
         android:layout_height="match_parent"
         android:text="Eric Pratt"/>
